Use HttpClient for making requests to tech stack